--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ssb-packetstream"
-version = "0.1.0"
+version = "0.2.0"
 authors = ["sean billig <sean.billig@gmail.com>"]
 edition = "2018"
 license = "AGPL-3.0"
@@ -8,7 +8,7 @@ description = "Secure Scuttlebutt packet stream protocol"
 repository = "https://github.com/sunrise-choir/ssb-packetstream"
 documentation = "https://docs.rs/ssb-packetstream/"
 readme = "README.md"
-keywords = ["packet-stream", "protocol", "ssb", "scuttlebutt"]
+keywords = ["packet-stream", "muxrpc", "ssb", "scuttlebutt"]
 
 [dependencies]
 async-trait = "0.1.21"
