--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,4 +17,4 @@ futures = "0.3.1"
 snafu = { version = "0.6.0", features = ["futures"] }
 
 [dev-dependencies]
-async-ringbuffer = "~0.5.2"
+async-ringbuffer = { version = "~0.5.2", git = "https://github.com/leo-lb/async-ringbuffer" }
